# ProblemBasedSelfStudy

./: .gitignore  DATABASE_SCHEMA.md  PROGRESS.md  README.md  api.py  docker-compose.yml  main.py  pyproject.toml  run.sh  run_api.sh
.cursor/rules/: tools.mdc
api/: app.py  models.py
backend/: Cargo.toml  config.toml
backend/mineru/: period_rm.sh
backend/src/: config.rs  detector.rs  job.rs  lib.rs  main.rs  model.rs  pdf.rs
backend/tests/: api.rs
frontend/pbss/: FRONTEND.md  TODO.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/pbss/src/: App.tsx  index.css
frontend/pbss/src/components/: Alert.tsx  BlockDetails.tsx  BookAction.tsx  BookCard.tsx  BookDetails.tsx  BookEdit.tsx  BookForm.tsx  BookView.tsx  Button.tsx  Card.tsx  Chat.tsx  ConfirmDialog.tsx  DebugToolbox.tsx  DivisionInformation.tsx  Guidance.tsx  Input.tsx  Modal.tsx  Sidebar.tsx  TableOfContents.tsx  Toast.tsx  ToastContainer.tsx  index.ts
frontend/pbss/src/hooks/: useBooks.ts  usePages.ts  useSections.ts
frontend/pbss/src/misc/: utils.ts
frontend/pbss/src/pages/: BooksPage.tsx  index.ts
frontend/pbss/src/services/: api.ts
frontend/pbss/src/stores/: useBookViewStore.ts  useBooksStore.ts  useGuidanceStore.ts  useModalStore.ts  useToastStore.ts  useTocStore.ts  useUIStore.ts
frontend/pbss/src/theme/: colors.ts
frontend/pbss/src/types/: api.ts
lazyreader/: Cargo.toml
lazyreader/src/: config.rs  lib.rs  model.rs
lazyreader/tests/schemas/: capitals.json
mineru/: Dockerfile  docker-compose.yml  period_rm.sh
tests/: test_api.py  test_context.py  test_database.py  test_reader.py  test_request.py
textbook/: __init__.py  context.py  database.py  mineru.py  model.py  reader.py
textbook/utils/: __init__.py  bayesian_detection.py  chapter_detection.py  toc_detection.py
