[package]
name = "lazyreader"
version = "0.1.0"
edition = "2024"

[lib]
name = "lazyreader"
path = "src/lib.rs"


[[bin]]
name = "lazyreader"
path = "src/main.rs"


[dependencies]
axum = { version = "0.8.8", features = ["ws", "multipart", "macros"] }
clap = { version = "4.5.53", features = ["derive"] }
config = "0.15.19"
derive_builder = "0.20.2"
dirs = "6.0.0"
dotenvy = "0.15.7"
llm = "1.3.6"
pdf2image = "0.1.3"
reqwest = { version = "0.12.28", features = ["multipart", "json"] }
sea-orm = { version = "1.1.19", features = [
  "sqlx-sqlite",
  "macros",
  "mock",
  "with-json",
  "postgres-vector",
] }
secret-string = "0.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tempfile = "3.24.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
toml = "0.9.10"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
float-cmp = "0.10.0"
log = { version = "0.4.29", features = ["max_level_trace"] }
