[package]
name = "lazyreader"
version = "0.1.0"
edition = "2024"

[lib]
name = "lazyreader"
path = "src/lib.rs"


[[bin]]
name = "lazyreader"
path = "src/main.rs"


[dependencies]
axum = { version = "0.8.8", features = ["ws", "multipart", "macros"] }
clap = { version = "4.5.53", features = ["derive"] }
config = "0.15.19"
dirs = "6.0.0"
llm = "1.3.6"
reqwest = "0.12.28"
sea-orm = { version = "1.1.19", features = [
  "sqlx-sqlite",
  "macros",
  "mock",
  "with-json",
] }
secret-string = "0.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tempfile = "3.24.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
toml = "0.9.10"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
